working for state and provider

--- a/templates/index.html
+++ b/templates/index.html
@@ -463,6 +463,7 @@
                     <option selected="selected">blank</option>
                 </select>
             </div>
+            <script src="static/build_tariff_selectors.js"></script>
             <div id="right_tariff_col" class="tariff_panel_cols">
                 <script src="static/tariff_tabs.js"></script>
                 <div id="tariff_panel_header">
