dynamic filtering working

--- a/templates/index.html
+++ b/templates/index.html
@@ -442,25 +442,23 @@
             </div>
             <div id="middle_tariff_col" class="tariff_panel_cols">
                 <select class="tariff_selectors" id="select_tariff_type" >
-                    <option selected="selected">blank1</option>
-                    <option selected="selected">blank2</option>
-                    <option selected="selected">blank3</option>
+                    <option selected="selected">Select1</option>
                 </select>
                 <div class="inter_selector_padder"></div>
                 <select class="tariff_selectors" id="select_tariff_state" >
-                    <option selected="selected">blank</option>
+                    <option selected="selected">Select1</option>
                 </select>
                 <div class="inter_selector_padder"></div>
-                <select class="tariff_selectors" id="select_tariff_Provider" >
-                    <option selected="selected">blank</option>
+                <select class="tariff_selectors" id="select_tariff_provider" >
+                    <option selected="selected">Select1</option>
                 </select>
                 <div class="inter_selector_padder"></div>
-                <select class="tariff_selectors" id="select_tariff_Year" >
-                    <option selected="selected">blank</option>
+                <select class="tariff_selectors" id="select_tariff_year" >
+                    <option selected="selected">Select1</option>
                 </select>
                 <div class="inter_selector_padder"></div>
                 <select class="tariff_selectors" id="select_tariff" >
-                    <option selected="selected">blank</option>
+                    <option selected="selected">Select1</option>
                 </select>
             </div>
             <script src="static/build_tariff_selectors.js"></script>
